--- a/src/renderer/pages/article/add.less
+++ b/src/renderer/pages/article/add.less
@@ -1,8 +1,3 @@
 .container {
-  width: 100%;
-  height: 100%;
-  background-color: #f1f1f1;
-  .title {
-    background-color: red;
-  }
+  padding: 1rem,
 }
